crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_import_modal_unsupported_plaintext_vault.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│                                                                              │
│   ┌ Import accounts ─────────────────────────────────────────────────────┐   │
│   │ Source:      [  ]                                                    │   │
│   │                                                                      │   │
│   │ Format:      ▶ Auto ◀    Otpauth      Aegis      Paladin      QR     │   │
│   │                                                                      │   │
│   │ On conflict: ▶ Skip ◀    Replace      Append                         │   │
│   │                                                                      │   │
│   │ Paladin import bundle is plaintext; v0.1 imports require encrypted b │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │           Tab cycles fields  ·  Enter submit  ·  Esc cancel          │   │
│   └──────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [n] next-HOTP  [a] add  [/] find                    │
└──────────────────────────────────────────────────────────────────────────────┘
