crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_list_view_after_zz_recenter.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: "render_to_text(&state, snapshot_now(), 80, 12)"
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│   Acct06 (u06)                        914 994   ██████░░░░   18s             │
│   Acct07 (u07)                        914 994   ██████░░░░   18s             │
│   Acct08 (u08)                        914 994   ██████░░░░   18s             │
│ ▶ Acct09 (u09)                        914 994   ██████░░░░   18s             │
│   Acct10 (u10)                        914 994   ██████░░░░   18s             │
│   Acct11 (u11)                        914 994   ██████░░░░   18s             │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [n] next-HOTP  [a] add  [/] find                    │
└──────────────────────────────────────────────────────────────────────────────┘
