crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_list_view_after_zz_recenter_no_color.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: "render_to_styled_text(&state, snapshot_now(), true, 80, 12)"
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│   Acct06 (u06)                        914 994  ↪   255 062  ██████░░░░   18s │
│   Acct07 (u07)                        914 994  ↪   255 062  ██████░░░░   18s │
│   Acct08 (u08)                        914 994  ↪   255 062  ██████░░░░   18s │
│ ▶ Acct09 (u09)                        914 994  ↪   255 062  ██████░░░░   18s │
│   Acct10 (u10)                        914 994  ↪   255 062  ██████░░░░   18s │
│   Acct11 (u11)                        914 994  ↪   255 062  ██████░░░░   18s │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
─── styles ───
(1..22, 0) " Paladin [plaintext] " fg=Reset bg=Reset mod=BOLD
(38..47, 3) "  914 994" fg=Reset bg=Reset mod=BOLD
(49..60, 3) "↪   255 062" fg=Reset bg=Reset mod=DIM
(38..47, 4) "  914 994" fg=Reset bg=Reset mod=BOLD
(49..60, 4) "↪   255 062" fg=Reset bg=Reset mod=DIM
(38..47, 5) "  914 994" fg=Reset bg=Reset mod=BOLD
(49..60, 5) "↪   255 062" fg=Reset bg=Reset mod=DIM
(2..49, 6) "▶ Acct09 (u09)                        914 994  " fg=Reset bg=Reset mod=BOLD | REVERSED
(49..60, 6) "↪   255 062" fg=Reset bg=Reset mod=BOLD | DIM | REVERSED
(60..78, 6) "  ██████░░░░   18s" fg=Reset bg=Reset mod=BOLD | REVERSED
(38..47, 7) "  914 994" fg=Reset bg=Reset mod=BOLD
(49..60, 7) "↪   255 062" fg=Reset bg=Reset mod=DIM
(38..47, 8) "  914 994" fg=Reset bg=Reset mod=BOLD
(49..60, 8) "↪   255 062" fg=Reset bg=Reset mod=DIM
