crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_list_view_empty.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
assertion_line: 151
expression: "render_to_text(&state, 80, 12)"
---
┌ Paladin ─────────────────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│                                                                              │
│                      No accounts. Press `a` to add one.                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [n] next-HOTP  [a] add  [/] find                    │
└──────────────────────────────────────────────────────────────────────────────┘
