crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_list_view_empty_no_color.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: "render_to_styled_text(&state, snapshot_now(), true, 80, 12)"
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│                                                                              │
│                      No accounts. Press `a` to add one.                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [n] next-HOTP  [a] add  [/] find                    │
└──────────────────────────────────────────────────────────────────────────────┘
─── styles ───
(1..22, 0) " Paladin [plaintext] " fg=Reset bg=Reset mod=BOLD
