crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_list_view_hotp_only_vault_omits_next_code_column.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│   Bank (savings) (#0)               ▸ press n to advance                     │
│ ▶ VPN (work) (#42)                  ▸ press n to advance                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
