crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_list_view_mixed_totp_hotp_hidden_and_revealed_no_color.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
assertion_line: 614
expression: "render_to_styled_text(&state, snapshot_now(), true, 80, 12)"
---
┌ Paladin ─────────────────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│   GitHub (ben@example.com)            914 994   ██████░░░░   18s             │
│   Bank (savings) (#0)               ▸ press n to advance                     │
│ ▶ VPN (work) (#41)                    654 321                                │
│                                                                              │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [n] next-HOTP  [a] add  [/] find                    │
└──────────────────────────────────────────────────────────────────────────────┘
─── styles ───
(none)
