crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_list_view_search_active.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: "render_to_text(&state, snapshot_now(), 80, 12)"
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search: git                                                                  │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ GitHub (ben@example.com)            914 994  ↪   255 062  ██████░░░░   18s │
│   GitLab (ben@example.com)            914 994  ↪   255 062  ██████░░░░   18s │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
